r213 (07. 01. 2024):
Added option "Show ECM Feedback Retrigger"
Adjusted "SNIPERS!" popup to be less spammy
Fixed an issue where disabled Minion Counter tracker could make Assault tracker inaccurate in Crime Spree

r212 (02. 01. 2024):
Fixed a crash with enabled description in Daily jobs/Daily Side jobs
Civilian Count Tracker: Fixed a crash when civilian died
Experience Manager: Fixed a crash when then XP Tracker is disabled
Experience Manager: Fixed an issue where the XP is inaccurate when Gage Packages Counter is disabled
Loot Counter: Fixed an issue with "ALL LOOT SECURED" popup where it is possible to trigger it more than once

r211 (01. 01. 2024):
Experience Manager: Fixed a load crash

r210 (31. 12. 2023):
Expanded option "Show XP difference"
Mission Briefing: Optimization and reduction of redraw calls
Mission Briefing: Fixed stack overflow
Civilian Count Tracker: Fixed moving tied civilian makes the counter inaccurate (host only)
XP Difference: Reduced amount of tracker spam when you get experience

r209 (28. 12. 2023):
"Swiss Cheese" achievement: Fixed an issue where civilian kills are not counted
Goat Simulator Day 2: Fixed a load crash

r208 (27. 12. 2023):
Floating Health Bar: Fixed an issue where it could get stuck after mission end
Mission Briefing: Reworked and optimized

r207 (23. 12. 2023):
Election Day 2 Plan C: Fixed a crash when snipers spawned

r206 (20. 12. 2023):
Added options "Show Floating Health Bar" and "Show 'SNIPERS!' Popup"
Improved compatibility with custom heists
Mission Briefing: Fixed issues with controller
Diamond Heist: Fixed an issue where Color Codes tracker do not hide after correct code
Firestarter Day 2: Fixed an issue where Sniper tracker overwrote first Assault delay tracker
Golden Grin Casino: Fixed incorrect tracker descriptions
Golden Grin Casino: Fixed an issue where Sniper tracker overwrote first Assault delay tracker
Hostile Takeover: Fixed a crash when achievement failed

r205 (10. 12. 2023):