@@ -76,8 +76,8 @@
     "ehi_hint_total_xp" : "总计经验",
     "ehi_hint_question" : "?",
     "ehi_hint_endless_assault" : "无尽突击",
-    "ehi_hint_fire" : "火焰陷阱",
-    "ehi_hint_fire_recharge" : "陷阱充能",
+    "ehi_hint_fire" : "火焰",
+    "ehi_hint_fire_recharge" : "火焰充能",
     "ehi_hint_escape" : "撤离",
     "ehi_hint_loot_escape" : "劫获区撤离",
     "ehi_hint_loot" : "劫获区",
@@ -347,6 +347,9 @@
     "ehi_show_xp_in_mission_briefing_only_desc" : "如果你想在简报页面而不在游戏中看到经验显示，请启用此功能",
 
     "ehi_total_xp_difference" : "显示经验值差异",
+	"ehi_total_xp_difference_desc" : "显示你获得了多少经验",
+    "ehi_total_xp_difference_1" : "不显示",
+    "ehi_total_xp_difference_2" : "显示提示",
 
     "ehi_show_trade_delay" : "显示交易延迟",
     "ehi_show_trade_delay_desc" : "当您或您的队友杀死人质时显示交易延迟",
@@ -430,6 +433,9 @@
     "ehi_show_equipment_ecmfeedback" : "显示ECM啸叫时间追踪器",
     "ehi_show_equipment_ecmfeedback_desc" : "显示ECM啸叫持续时间追踪器\n默认显示结束时间最晚的ECM时间",
     
+    "ehi_show_ecmfeedback_refresh" : "显示ECM啸叫充能追踪器",
+    "ehi_show_ecmfeedback_refresh_desc" : "显示ECM啸叫充能时间的追踪器",
+	
     "ehi_show_equipment_aggregate_health" : "整合医疗箱与急救包追踪器",
     "ehi_show_equipment_aggregate_health_desc" : "把医疗箱与急救包追踪器整合为一个追踪器 ",
 
